--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ override.tf.json
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+# Ignore ssh key temp files
+sshkeytemp
+sshkeytemp.pub
