--- a/terraform-azurerm-vnet-shared/configure-vm-jumpbox-linux.yaml
+++ b/terraform-azurerm-vnet-shared/configure-vm-jumpbox-linux.yaml
@@ -1,7 +1,4 @@
 #cloud-config
-#
-# Installs azure-cli and terraform
-# Adapted from: https://github.com/azurecitadel/arc-onprem-servers/blob/main/linux/cloud_init/azure_cli.yaml 
 
 merge_how:
  - name: list
@@ -122,5 +119,15 @@ packages:
   - azure-cli
   - terraform
   - powershell
+  - krb5-user
+  - samba
+  - sssd
+  - sssd-tools
+  - libnss-sss
+  - libpam-sss
+  - ntp
+  - ntpdate
+  - realmd
+  - adcli
 package_upgrade: true
 package_reboot_if_required: true
