--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ crash.log
 *.tfvars
 
 # Trace files
-terraform.tracelog
+terraform.log
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
